<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_emails"
            android:icon="@drawable/ic_baseline_email_24"
            android:title="@string/menu_emails" />
        <item
            android:id="@+id/nav_folders"
            android:icon="@drawable/ic_baseline_folder_24"
            android:title="@string/menu_folders" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_baseline_contacts_24"
            android:title="@string/menu_contacts" />
    </group>
</menu>