<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mailsapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_emails"
        android:name="com.example.mailsapp.ui.emails.EmailsFragment"
        android:label="@string/menu_emails"
        tools:layout="@layout/emails_fragment" />
    <fragment
        android:id="@+id/nav_folders"
        android:name="com.example.mailsapp.ui.folders.FoldersFragment"
        android:label="@string/menu_folders"
        tools:layout="@layout/folders_fragment" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.mailsapp.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/profile_fragment" />
    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.mailsapp.ui.contacts.ContactsFragment"
        android:label="@string/menu_contacts"
        tools:layout="@layout/contacts_fragment" />
    <fragment
        android:id="@+id/nav_sent_mail"
        android:name="com.example.mailsapp.ui.sentmail.SentMailFragment"
        android:label="@string/menu_sent_mail"
        tools:layout="@layout/sent_mail_fragment" />
</navigation>